--- a/_tweets-md/2023/2023-04-01-tweets.md
+++ b/_tweets-md/2023/2023-04-01-tweets.md
@@ -341,7 +341,7 @@ Replying to [@LizLum and @jasonhenrichs](https://twitter.com/LizLum/status/16435
 
 > Wide Use: Blockchain Commons’ Animated QRs have already seen broad adoption in the Bitcoin wallet developer community, enabling reliable PSBT transmission via QR codes.  Here are some of the key early adopters @FOUNDATIONdvcs @KeystoneWallet @SparrowWallet @FullyNoded [6/10] 
 > 
-> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/1646273024650539008-FtizxZSaAAEQzBj.jpg)
+> ![1646273024650539008-FtizxZSaAAEQzBj]({{ site.url }}{{ site.baseurl }}/assets/images/media/1646273024650539008-FtizxZSaAAEQzBj.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Apr 12 22:04:10 +0000 2023](https://twitter.com/ChristopherA/status/1646273024650539008)
 
@@ -421,7 +421,7 @@ Replying to [@SeedSigner](https://twitter.com/SeedSigner/status/1646280804362776
 
 > Finally, we continued our community work with a new series of Developer Meetings [https://github.com/BlockchainCommons/Gordian-Developer-Community/tree/master/meetings](https://github.com/BlockchainCommons/Gordian-Developer-Community/tree/master/meetings) and with Silicon Salon 3. [8/11] [https://www.SiliconSalon.info](https://www.SiliconSalon.info) 
 > 
-> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/1650533161485598720-FufdqfuacAAcBkg.jpg)
+> ![1650533161485598720-FufdqfuacAAcBkg]({{ site.url }}{{ site.baseurl }}/assets/images/media/1650533161485598720-FufdqfuacAAcBkg.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Apr 24 16:12:25 +0000 2023](https://twitter.com/ChristopherA/status/1650533161485598720)
 
@@ -435,7 +435,7 @@ Replying to [@SeedSigner](https://twitter.com/SeedSigner/status/1646280804362776
 
 > There’s lots more in the report, including discussions of recent maintenance of our existing reference apps such as Spotbit. [6/11] 
 > 
-> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/1650533159308775426-Fufdd6XacAEF2nc.jpg)
+> ![1650533159308775426-Fufdd6XacAEF2nc]({{ site.url }}{{ site.baseurl }}/assets/images/media/1650533159308775426-Fufdd6XacAEF2nc.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Apr 24 16:12:25 +0000 2023](https://twitter.com/ChristopherA/status/1650533159308775426)
 
