--- a/_tweets-md/2023/2023-05-01-tweets.md
+++ b/_tweets-md/2023/2023-05-01-tweets.md
@@ -834,7 +834,7 @@ Replying to [@ryanberckmans](https://twitter.com/ryanberckmans/status/1658477679
 
 > You want to back up some of your shares on a metal plate, such as the innovative QR plates using SSKR shards from @SeedHammer? That’s OK! Your assets, your choice. [6/112] 
 > 
-> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/16590689529523240930FwYya4_acAAl3ha.jpg)
+> ![16590689529523240930FwYya4_acAAl3ha]({{ site.url }}{{ site.baseurl }}/assets/images/media/16590689529523240930FwYya4_acAAl3ha.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu May 18 05:30:37 +0000 2023](https://twitter.com/ChristopherA/status/1659068952952324097)
 
