--- a/_tweets-md/2023/2023-06-01-tweets.md
+++ b/_tweets-md/2023/2023-06-01-tweets.md
@@ -62,7 +62,7 @@ Replying to [@TimoGlastra](https://twitter.com/TimoGlastra/status/16663447739831
 
 > RT @ArcadeCityMayor: Best opening slide ever 👍 ⁦@LeaPetras⁩ 
 > 
-> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/16681095483878072330FyHpkZWagAIuKGy.jpg)
+> ![16681095483878072330FyHpkZWagAIuKGy]({{ site.url }}{{ site.baseurl }}/assets/images/media/16681095483878072330FyHpkZWagAIuKGy.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jun 12 04:14:42 +0000 2023](https://twitter.com/ChristopherA/status/1668109548387807234)
 
@@ -276,7 +276,7 @@ Replying to [@xovemnormie and @matthew_d_green](https://twitter.com/xovemnormie/
 
 > You can slightly see the artist mirrored in the pearl in this 108 billion (!) pixel scan of Johannes Vermeer’s masterpiece “The Girl With The Pearl Earring”. I remember reading about it and when I was in The Hague where I looked for and spotted it. [https://www.newscientist.com/video/2378702-scans-of-girl-with-a-pearl-earring-reveal-paintings-hidden-secrets/](https://www.newscientist.com/video/2378702-scans-of-girl-with-a-pearl-earring-reveal-paintings-hidden-secrets/) 
 > 
-> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/16698522816117350430FyyBzBKWcAULxy9.jpg)
+> ![16698522816117350430FyyBzBKWcAULxy9]({{ site.url }}{{ site.baseurl }}/assets/images/media/16698522816117350430FyyBzBKWcAULxy9.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jun 16 23:39:42 +0000 2023](https://twitter.com/ChristopherA/status/1669852281611735041)
 
