--- a/_tweets-md/2023/2023-09-01-tweets.md
+++ b/_tweets-md/2023/2023-09-01-tweets.md
@@ -94,7 +94,7 @@ time:  23:59:59 +0000
 
 > RT @RWOTEvents: Here's some of our principles of collaboration in collaborative form! 
 > 
-> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/17042012521235951030F6ZIKKRa0AAJcjV.jpg)
+> ![17042012521235951030F6ZIKKRa0AAJcjV]({{ site.url }}{{ site.baseurl }}/assets/images/media/17042012521235951030F6ZIKKRa0AAJcjV.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Sep 19 18:30:15 +0000 2023](https://twitter.com/ChristopherA/status/1704201252123595106)
 
