--- a/_tweets-md/2023/2023-11-01-tweets.md
+++ b/_tweets-md/2023/2023-11-01-tweets.md
@@ -430,7 +430,7 @@ Replying to [@zachherbert](https://twitter.com/zachherbert/status/17293592452277
 
 > The main problem was over-identification. To support Netherlands citizens in the Great Depression, an identity pioneer named Jacbous Lentz created extensive civil registries, which were then taken over by the Nazis. 75% of Dutch Jews were murdered as as result. [3/11] 
 > 
-> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/17298151235717083330GAGBcXXbUAAYGdv.jpg)
+> ![17298151235717083330GAGBcXXbUAAYGdv]({{ site.url }}{{ site.baseurl }}/assets/images/media/17298151235717083330GAGBcXXbUAAYGdv.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Nov 29 10:50:38 +0000 2023](https://twitter.com/ChristopherA/status/1729815123571708335)
 
@@ -456,7 +456,7 @@ Replying to [@zachherbert](https://twitter.com/zachherbert/status/17293592452277
 
 > It didn’t have to be that way. In France, another identity pioneer named René Carmille had his own civil registries, but he practiced selective disclosure, purposefully keeping religious information from the Nazis. Only 23% of French Jews were killed. [4/11] 
 > 
-> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/17298151256269046730GAGHs5eb0AAAptu.jpg)
+> ![17298151256269046730GAGHs5eb0AAAptu]({{ site.url }}{{ site.baseurl }}/assets/images/media/17298151256269046730GAGHs5eb0AAAptu.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Nov 29 10:50:39 +0000 2023](https://twitter.com/ChristopherA/status/1729815125626904670)
 
