--- a/_tweets-md/2024/2024-03-01-tweets.md
+++ b/_tweets-md/2024/2024-03-01-tweets.md
@@ -1,3 +1,9 @@
+---
+title: "Social Media - March"
+date: "2024-03-31"
+time:  23:59:59 +0000
+---
+
 > RT @zooko: It’s the 31st anniversary of the publication of “A Cypherpunk’s Manifesto” by Eric Hughes. It is a very relevant and important d…
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Mar 11 13:10:47 +0000 2024](https://twitter.com/ChristopherA/status/1767176344994296042)
