--- a/_tweets-md/2024/2024-02-01-tweets.md
+++ b/_tweets-md/2024/2024-02-01-tweets.md
@@ -1,3 +1,9 @@
+---
+title: "Social Media - Febuary"
+date: "2024-12-29"
+time:  23:59:59 +0000
+---
+
 > RT @RWOTEvents: We've now officially finalized Christiane Wirrig's paper on "The Ecosystem Coordinator’s Role in SSI Ecosystem Management".…
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Feb 01 20:28:03 +0000 2024](https://twitter.com/ChristopherA/status/1753153258690891782)
