--- a/_tweets-md/2024/2024-04-01-tweets.md
+++ b/_tweets-md/2024/2024-04-01-tweets.md
@@ -1,3 +1,9 @@
+---
+title: "Social Media - April"
+date: "2024-04-30"
+time:  23:59:59 +0000
+---
+
 > Though we at @BlockchainComns appreciate the free hosting of open source projects by GitHub, the centralization when they were acquired by Microsoft is a bit unnerving. At least the underlying git software is supports ‘distributed’. I’m intrigued by @radicle which moves git… https://twitter.com/radicle/status/1772659708978991605
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Apr 02 06:03:33 +0000 2024](https://twitter.com/ChristopherA/status/1775041359826858027)
