--- a/_tweets-md/2024/2024-06-01-tweets.md
+++ b/_tweets-md/2024/2024-06-01-tweets.md
@@ -1,3 +1,9 @@
+---
+title: "Social Media - June"
+date: "2024-06-30"
+time:  23:59:59 +0000
+---
+
 > This paper demonstrates some practical &amp; secure applications to verify Bitcoin transaction properties, with secp256k1 Schnorr examples using Groth16 &amp; Plonk proofs. These could optimize scenarios like blind transaction cosigners, escrow, blind coinswaps, and more. Powerful!🔍👀 https://twitter.com/n1ckler/status/1798028407550464337
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 05 18:23:03 +0000 2024](https://twitter.com/ChristopherA/status/1798420285282275471)
