--- a/_tweets-md/2024/2024-07-01-tweets.md
+++ b/_tweets-md/2024/2024-07-01-tweets.md
@@ -1,3 +1,9 @@
+---
+title: "Social Media - July"
+date: "2024-07-31"
+time:  23:59:59 +0000
+---
+
 > Today's Gordian Wallet Community meeting focused on Gordian Sealed Transaction Protocol (GSTP), a secure, transport-agnostic request/response system that supports Encrypted State Continuations (ESC) [1/17]. https://www.youtube.com/watch?v=QnH14LkJOnI
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 11 16:32:56 +0000 2024](https://twitter.com/ChristopherA/status/1811438537272873199)
