--- a/_tweets-md/2024/2024-08-01-tweets.md
+++ b/_tweets-md/2024/2024-08-01-tweets.md
@@ -1,3 +1,9 @@
+---
+title: "Social Media - August"
+date: "2024-08-31"
+time:  23:59:59 +0000
+---
+
 > RT @n1ckler: ChillDKG finally has a sister BIP that specifies the signing part of FROST! The draft already has reference implementation &amp; t…
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Aug 02 01:54:46 +0000 2024](https://twitter.com/ChristopherA/status/1819190071154860195)
