--- a/_tweets-md/2024/2024-09-01-tweets.md
+++ b/_tweets-md/2024/2024-09-01-tweets.md
@@ -1,3 +1,9 @@
+---
+title: "Social Media - September"
+date: "2024-09-30"
+time:  23:59:59 +0000
+---
+
 > The discovery of an elliptic curve with rank 29 isn't just a mathematical curiosity—it's a may be game-changer! Higher rank elliptic curves mean more rational points, which are crucial for cryptography, offering new possibilities for secure key generation. 🔐 1/3 https://twitter.com/dujella1/status/1829272772343898176
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Sep 02 20:04:03 +0000 2024](https://twitter.com/ChristopherA/status/1830698222903521394)
