--- a/_tweets-md/2024/2024-10-01-tweets.md
+++ b/_tweets-md/2024/2024-10-01-tweets.md
@@ -1,3 +1,9 @@
+---
+title: "Social Media - October"
+date: "2024-10-31"
+time:  23:59:59 +0000
+---
+
 > RT @opencryptoorg: The fight against patent trolls just got stronger. COPA and @unifiedpatents have joined forces to protect blockchain inn…
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Oct 01 16:24:52 +0000 2024](https://twitter.com/ChristopherA/status/1841152310250258765)
