--- a/_tweets-md/2024/2024-11-01-tweets.md
+++ b/_tweets-md/2024/2024-11-01-tweets.md
@@ -1,3 +1,9 @@
+---
+title: "Social Media - November"
+date: "2024-11-30"
+time:  23:59:59 +0000
+---
+
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1852404337370378417)
 
 > Also at the meeting, we'll be looking at how Gordian technology can improve digital identity. I'll be presenting on using Gordian Sealed Transaction Protocol (GSTP) to create MuSig 2 signatures securely. [4/7]
